import { Entity } from './entity';

export type AggregateRoot = Entity;
