export interface ValueObject {
  // TODO
}